--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/anotherFeng/next-blog#readme",
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "^7.0.2",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
