--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/anotherFeng/next-blog#readme",
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.18.0",
     "next": "^7.0.2",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
