--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   },
   "homepage": "https://github.com/anotherFeng/next-blog#readme",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
     "express": "^4.16.4",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "reactstrap": "^7.1.0"
   }
 }
