--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^1.18.9",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-typed": "^1.1.0",
     "reactstrap": "^7.1.0"
   }
 }
